--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <section id="projects">
     <h2 id="project-title">Here Are Some Of My Projects:</h2>
     <div class="project-grid">
-    <a id="profile-link"  target="_blank" href="https://www.freecodecamp.org/certification/fcc169a630c-c5d0-40d5-85a5-62b0a64a0bcb/responsive-web-design" target="_blank">
+    <a id="profile-link"  target="_blank" href="https://judelwin.github.io/todolist" target="_blank">
     <div class="project-tile">
-      <img class="project-img" src="https://i.imgur.com/VwyOXBB.png">
-      <p class="caption" >Kitties!</p>
+      <img class="project-img" src="https://imgur.com/a/YewCEEw">
+      <p class="caption" >To-Do List</p>
     </div>
     </a>
     <a id="profile-link"  href="google.com" target="_blank">
