--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
 <body>
   <section id="welcome-section">
     <div id="profile">
-    <!--<img id="profile-img" src="https://www.freeiconspng.com/thumbs/profile-icon-png/profile-icon-9.png">
-    -->
     <h1 id="name">Hi, I'm Jude</h1>
     <p id="about">Computer Science @ UMD</p>
   </div>
@@ -30,7 +28,7 @@
     <div class="project-grid">
     <a id="profile-link"  target="_blank" href="https://judelwin.github.io/todolist" target="_blank">
     <div class="project-tile">
-      <img class="project-img" src="https://imgur.com/a/YewCEEw">
+      <img class="project-img" src="https://i.imgur.com/Ez5JQP2.png">
       <p class="caption" >To-Do List</p>
     </div>
     </a>
