--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="project-grid">
       <a id="profile-link"  href="https://fullstack-todo-list-eight.vercel.app/login" target="_blank">
     <div class="project-tile">
-      <img class="project-img" src="https://imgur.com/W8M9Ndz">
+      <img class="project-img" src="https://i.imgur.com/W8M9Ndz.png">
       <p class="caption" >Mern Stack To-do List</p>
     </div>
     </a>
