Update project text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <a id="profile-link"  href="https://fullstack-todo-list-eight.vercel.app/login" target="_blank">
     <div class="project-tile">
       <img class="project-img" src="https://i.imgur.com/W8M9Ndz.png">
-      <p class="caption" >Mern Stack To-do List</p>
+      <p class="caption" >MERN To-Do List</p>
     </div>
     </a>
     <a id="profile-link"  target="_blank" href="https://judelwin.github.io/todolist" target="_blank">
