--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
   <section id="projects">
     <h2 id="project-title">Here Are Some Of My Projects:</h2>
     <div class="project-grid">
+      <a id="profile-link"  href="https://habit-tracker-a2796.web.app/" target="_blank">
+    <div class="project-tile">
+      <img class="project-img" src="https://imgur.com/kvhC8zw">
+      <p class="caption" >Habit Tracker</p>
+    </div>
+    </a>
       <a id="profile-link"  href="https://fullstack-todo-list-eight.vercel.app/login" target="_blank">
     <div class="project-tile">
       <img class="project-img" src="https://i.imgur.com/W8M9Ndz.png">
@@ -36,12 +42,6 @@
     <div class="project-tile">
       <img class="project-img" src="https://i.imgur.com/Ez5JQP2.png">
       <p class="caption" >To-Do List</p>
-    </div>
-    </a>
-    <a id="profile-link"  href="google.com" target="_blank">
-    <div class="project-tile">
-      <img class="project-img" src="https://img.freepik.com/premium-photo/creative-glowing-purple-coding-programming-background-with-square-mock-up-frame-big-data-code-concept-3d-rendering_670147-2282.jpg">
-      <p class="caption" >Project</p>
     </div>
     </a>
     <a id="profile-link"  href="google.com" target="_blank">
