--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="project-grid">
       <a id="profile-link"  href="https://habit-tracker-a2796.web.app/" target="_blank">
     <div class="project-tile">
-      <img class="project-img" src="https://imgur.com/kvhC8zw">
+      <img class="project-img" src="https://i.imgur.com/kvhC8zw.png">
       <p class="caption" >Habit Tracker</p>
     </div>
     </a>
