--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <section id="projects">
     <h2 id="project-title">Here Are Some Of My Projects:</h2>
     <div class="project-grid">
-      <a id="profile-link"  href="https://habit-tracker-a2796.web.app/" target="_blank">
+      <a id="profile-link"  href="https://habits.judelwin.com" target="_blank">
     <div class="project-tile">
       <img class="project-img" src="https://i.imgur.com/DA7NqlH.png">
       <p class="caption" >Habit Tracker</p>
     </div>
     </a>
-      <a id="profile-link"  href="https://fullstack-todo-list-eight.vercel.app/login" target="_blank">
+      <a id="profile-link"  href="https://tasks.judelwin.com" target="_blank">
     <div class="project-tile">
       <img class="project-img" src="https://i.imgur.com/W8M9Ndz.png">
       <p class="caption" >MERN To-Do List</p>
